sumo/tests/traci/VariableRetrieval/Vehicle/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Mon Jul 01 13:26:00 2013


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=164 varID=64 objID=xxx
.. Answered with error to command (164), [description: Vehicle 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
